--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -34,6 +34,16 @@ nav ul li{
   font-size: 16px;
 }
 
+nav ul li a {
+  text-decoration: none;
+  color: #fff;
+  transition: color 0.3s;
+}
+
+nav ul li a:hover {
+  color: #a8e0ff;
+}
+
 .hamburger {
   display: none;
   flex-direction: column;
